<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="2000"
        android:inputType="number"
        android:key="goal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Set your daily goal (mL)"
        android:hint="The recommended amount is 1600-2400 mL for adults"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages"/>

    <PreferenceCategory
        android:title="Reminder">
        <SwitchPreference
            android:defaultValue="true"
            android:key="reminder"
            android:title="@string/pref_title_water_reminder"/>
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="reminder"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate"/>
    </PreferenceCategory>

</PreferenceScreen>
